[package]
name = "course_oop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = { git = "https://github.com/Relm4/relm4", rev="144f48319ffd7a889f28853df00e802cfc97dc26", features = [ "macros", "libadwaita" ] }
serde = { version = "1.0", features=["derive","rc","std"] }
byte-unit = {version="4.0",features = ["serde"]}
fs_extra = "1.2"
anyhow = "1.0"
chrono = { version = "0.4", features=["serde"]}
lazy_static = "1.4.0"
dirs = "4.0.0"
serde_json = "1.0"
open = "3.0.1"
infer = "0.8.1"
duration-string = "0.1.1"
trash = "2.1.4"